--- a/package.json
+++ b/package.json
@@ -31,13 +31,14 @@
     "html-loader": "4.1.0",
     "html-webpack-plugin": "5.5.0",
     "jest": "28.1.3",
+    "jest-environment-jsdom": "28.1.3",
     "msw": "0.44.2",
     "nodemon": "2.0.19",
     "string-replace-loader": "3.1.0",
     "style-loader": "3.3.1",
     "webpack": "5.74.0",
     "webpack-cli": "4.10.0",
-    "webpack-dev-server": "4.9.3"
+    "webpack-dev-server": "4.10.0"
   },
   "dependencies": {
     "axios": "0.27.2",
